tests/e2e/semantics/head_const_output7.error
Error: syntax error in story at line 3, column 9

3|            res["foo"] = 2
              ^^^^^^^^^^^^

E0127: `res[]` is readonly and can not be assigned to.
